--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,14 +6,22 @@ html, body {
 }
 
 body {
-	background-color: #E8F2FB;
+	background-color: #FFFFF8;
 	height: 100%;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+	height: 20px;
+	width: 150px;
 }
 
 #banner {
 	width: 100%;
 	height: 125px;
-	background-color: gray;
+	background-color: #FFFFF8;
+	border-bottom: 5px solid #E0E0E0;
 }
 
 #wrapper {
@@ -21,21 +29,18 @@ body {
 	height:auto;
 	overflow:none;
 	margin:auto;
-	background-color: red;
 }
 
 #content {
-	float:left;
-	width:680px;
-	background-color: green;
+	float: left;
+	width: 1024px;
 }
 
 #footer {
-	background-color: blue;
 }
 
 #main_menu {
-	background-color: #CCF;
+	background-color: #FFCC66;
 }
 
 .clear {
