--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -17,6 +17,17 @@ input[type="email"] {
 	width: 150px;
 }
 
+a {
+	color: #3399FF;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+a:hover {
+	color: #FF9933;
+	cursor: pointer;
+}
+
 #banner {
 	width: 100%;
 	height: 125px;
@@ -41,6 +52,12 @@ input[type="email"] {
 
 #main_menu {
 	background-color: #FFCC66;
+	height: 30px;
+}
+
+#main_menu table {
+	width: 1024px;
+	margin: auto;
 }
 
 .clear {
